--- a/destinations.html
+++ b/destinations.html
@@ -20,7 +20,7 @@
           <a class="nav-link" href="home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="destinations.html">Destinations</a>
+          <a class="nav-link text-danger" href="destinations.html">Destinations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="reports.html">Reports</a>
