--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
+          <a class="nav-link text-danger" href="home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="destinations.html">Destinations</a>
