--- a/reports.html
+++ b/reports.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="destinations.html">Destinations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="reports.html">Reports</a>
+                    <a class="nav-link text-danger" href="reports.html">Reports</a>
                 </li>
             </ul>
         </div>
